# codex-clone-launcher

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  release_update.yml
.github/workflows/: build.yml  release-macos.yml  release.yml
docs/: codex-clone-launcher.md
scripts/: cargo-test-workspace.cjs  create-windows-shortcut.ps1  prepare-tauri.cjs  publish-updater-latest.cjs  start-codex-clone-launcher.ps1  sync-version.js  tauri-before-build.cjs  tauri-dev.cjs  validate-release-version.cjs  verify-release-workflow.cjs  verify-ui-regression.cjs  verify-ui-workflows.cjs  verify-updater-release.cjs  verify-windows-shortcut.ps1
src/: App.css  App.tsx  main.tsx  providerCatalog.ts  telemetry.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/native/macos-native-menu/: Package.swift
src-tauri/native/macos-native-menu/Sources/MacosNativeMenuSwift/: NativeMenuBridge.swift  NativeMenuModels.swift  NativeMenuPopoverController.swift  NativeMenuView.swift  ProviderIconView.swift
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: codex.rs  codex_instance.rs  git_worktree.rs  mod.rs  system.rs
src-tauri/src/models/: codex.rs  instance.rs  mod.rs
src-tauri/src/modules/: account.rs  account_index_repair.rs  atomic_write.rs  codex_account.rs  codex_chat_bridge.rs  codex_history_sync.rs  codex_instance.rs  codex_oauth.rs  codex_official_app_server.rs  codex_protocol.rs  codex_sync_package.rs  config.rs  instance.rs  instance_store.rs  logger.rs  mod.rs  oauth_pending_state.rs  process.rs
src-tauri/src/utils/: http.rs
src/components/: CardMenu.tsx
src/features/accounts/: AccountFlowPanel.tsx  CreateCodexPage.tsx  ProviderFeedbackPanels.tsx  accountUtils.ts
src/features/dashboard/: DashboardPage.tsx
src/features/diagnostics/: DiagnosticsPanel.tsx  diagnosticsReports.ts
src/features/guide/: OperationGuide.tsx
src/features/instances/: CloneCapabilityEditor.tsx  CloneReadinessPanel.tsx  CodexInstancesPage.tsx  InstanceCapabilityBadges.tsx  InstanceHistoryCell.tsx  InstanceList.tsx  InstanceListSection.tsx  InstanceMoreActionItems.tsx  InstancePrimaryActions.tsx  InstanceStatusBadge.tsx  InstanceSyncBadges.tsx  InstanceTableHeader.tsx  SessionPanels.tsx  instanceUtils.ts  sessionUsage.ts
src/features/settings/: SettingsPage.tsx
src/features/sync-package/: SyncPackagePanel.tsx  SyncPackageResources.tsx  syncPackageReports.ts  syncPackageStatus.ts  syncPackageUtils.ts
src/features/updater/: UpdatePanel.tsx  useAppUpdater.ts
src/services/: diagnostics.ts
src/shared/: types.ts
src/test-support/: tauriE2eMocks.ts
