[workspace]
members = [
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies with shared versions
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "2"
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "zstd", "stream"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
url = "2.5"
regex = "1"
futures = "0.3"
sysinfo = "0.33"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
tracing-log = "0.2"
trash = "5"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
mac-notification-sys = "0.6"
tauri-plugin-notification = "2"
rand = "0.8"
sha2 = "0.10"
tokio-tungstenite = "0.26"
futures-util = "0.3"
rustls = "0.23"
rcgen = "0.13"
tokio-rustls = "0.26"
libc = "0.2"
tiny_http = "0.12"
rsa = "0.9"
serde_urlencoded = "0.7"
windows = { version = "0.58", features = ["Win32_Foundation"] }

[profile.release]
# Avoid MSVC rustc 0xffffffff crashes seen while compiling Windows/Tauri crates.
opt-level = 0
